Architecture modification OK

--- a/test_ecoute_spectro.ipynb
+++ b/test_ecoute_spectro.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "snr = 10\n",
-    "model_name = \"model.pth\"\n",
+    "model_name = Path.cwd() / \"model.pth\"\n",
     "name = 980"
    ]
   },
