--- a/test_ecoute_spectro.ipynb
+++ b/test_ecoute_spectro.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,24 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "snr = 10\n",
-    "model_name = Path.cwd() / \"model.pth\"\n",
+    "model_name = \"model.pth\"\n",
     "name = 980"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "generated_mask_path = Path.cwd() / \"data\" / \"generated_mask\" / model_name[:-4] / f\"{snr}\" /  f\"{name}.pkl\"\n",
     "signal_and_noise_path = Path.cwd() / \"data\" / \"noised_data\" / f\"{snr}\" / f\"{name}.flac\"\n",
-    "original_path = Path.cwd() / \"data\" / \"raw_data_cut\" / f'{name}.flac'\n",
+    "# original_path = Path.cwd() / \"data\" / \"raw_data_cut\" / f'{name}.flac'\n",
     "audio_raw_data_path = Path.cwd() / \"data\" / \"raw_data_cut\" / f\"{name}.flac\" \n",
     "\n",
     "param_stft = Param_stft()"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_383/1513788982.py:6: UserWarning: amplitude_to_db was called on complex input so phase information will be discarded. To suppress this warning, call amplitude_to_db(np.abs(S)) instead.\n",
+      "/tmp/ipykernel_4818/1513788982.py:6: UserWarning: amplitude_to_db was called on complex input so phase information will be discarded. To suppress this warning, call amplitude_to_db(np.abs(S)) instead.\n",
       "  librosa.display.specshow(librosa.amplitude_to_db(stft_y_raw, ref=np.max), sr=sr, hop_length=param_stft.hop_length, x_axis='time', y_axis='log')\n"
      ]
     },
@@ -165,7 +165,7 @@
        "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -248,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_383/2407408645.py:3: UserWarning: amplitude_to_db was called on complex input so phase information will be discarded. To suppress this warning, call amplitude_to_db(np.abs(S)) instead.\n",
+      "/tmp/ipykernel_4818/2407408645.py:3: UserWarning: amplitude_to_db was called on complex input so phase information will be discarded. To suppress this warning, call amplitude_to_db(np.abs(S)) instead.\n",
       "  librosa.display.specshow(librosa.amplitude_to_db(stft_y_noised, ref=np.max), sr=sr, hop_length=param_stft.hop_length, x_axis='time', y_axis='log')\n"
      ]
     },
@@ -265,7 +265,7 @@
        "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -301,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_383/712146227.py:3: UserWarning: amplitude_to_db was called on complex input so phase information will be discarded. To suppress this warning, call amplitude_to_db(np.abs(S)) instead.\n",
+      "/tmp/ipykernel_4818/712146227.py:3: UserWarning: amplitude_to_db was called on complex input so phase information will be discarded. To suppress this warning, call amplitude_to_db(np.abs(S)) instead.\n",
       "  librosa.display.specshow(librosa.amplitude_to_db(signal_and_noise_with_mask, ref=np.max), sr=sr, hop_length=param_stft.hop_length, x_axis='time', y_axis='log')\n"
      ]
     },
@@ -318,7 +318,7 @@
        "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
